// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserDefinedConfigEditComponent renders all widget types with defaults 1`] = `
<div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      StringField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldstringField"
      maxlength="255"
      name="formFieldConfigFieldstringField"
      type="text"
      value="hello"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      BooleanField
    </label>
    <div
      class="tr__form-input-checkbox-group-container"
    >
      <div
        class="tr__form-input-checkbox-group-column no-wrap"
      >
        <div
          class="tr__form-input-checkbox-container checked"
        >
          <div
            class="label-input-container"
          >
            <input
              checked=""
              class="_input-checkbox"
              id="formFieldConfigFieldbooleanField_true"
              name="formFieldConfigFieldbooleanField"
              type="checkbox"
              value="true"
            />
            <label
              for="formFieldConfigFieldbooleanField_true"
            >
              <span>
                Yes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      IntegerField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldintegerField"
      maxlength="255"
      name="formFieldConfigFieldintegerField"
      type="number"
      value="3"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      NumberField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldnumberField"
      maxlength="255"
      name="formFieldConfigFieldnumberField"
      type="text"
      value="3.14"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      PercentageField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldpercentageField"
      maxlength="255"
      name="formFieldConfigFieldpercentageField"
      type="text"
      value="20"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      SecondsField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldsecondsField"
      maxlength="255"
      name="formFieldConfigFieldsecondsField"
      type="number"
      value="120"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      MinutesField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldminutesField"
      maxlength="255"
      name="formFieldConfigFieldminutesField"
      type="number"
      value="5"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      HoursField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldhoursField"
      maxlength="255"
      name="formFieldConfigFieldhoursField"
      type="number"
      value="2"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      SelectField
    </label>
    <select
      autocomplete="none"
      class="tr__form-input-select apptr__input _input-select"
      id="formFieldConfigFieldselectField"
      name="formFieldConfigFieldselectField"
      style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
    >
      <option
        value=""
      />
      <option
        value="a"
      >
        ChoiceA
      </option>
      <option
        value="b"
      >
        ChoiceB
      </option>
    </select>
  </div>
  <div
    class="apptr__form-input-container _small-inputs"
  >
    <label>
      MultiselectField
    </label>
    <div
      class="tr__form-input-multiselect"
    >
      <div
        class="react-select-container apptr__input _input-multiselect css-b62m3t-container"
        id="formFieldConfigFieldmultiselectField"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          class="react-select__control css-1eyznq-control"
        >
          <div
            class="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-3w2yfm-ValueContainer"
          >
            <div
              class="react-select__multi-value css-ics3nv-multiValue"
            >
              <div
                class="react-select__multi-value__label css-95e0ok-MultiValueGeneric"
              >
                ChoiceA
              </div>
              <div
                aria-label="Remove ChoiceA"
                class="react-select__multi-value__remove css-12a83d4-MultiValueRemove"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="14"
                  viewBox="0 0 20 20"
                  width="14"
                >
                  <path
                    d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="react-select__input-container css-1oxiwsr-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="react-select__input"
                id="react-select-2-input"
                role="combobox"
                spellcheck="false"
                style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__clear-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                />
              </svg>
            </div>
            <span
              class="react-select__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input
            name="formFieldConfigFieldmultiselectField"
            type="hidden"
            value="a"
          />
        </div>
      </div>
    </div>
  </div>
  <h4>
    CsvField
  </h4>
  <div
    data-testid="csv-mapping-form"
  />
  <h4>
    NestedField
  </h4>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      NestedString
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldnestedString"
      maxlength="255"
      name="formFieldConfigFieldnestedString"
      type="text"
      value="nested"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      NestedNumber
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldnestedNumber"
      maxlength="255"
      name="formFieldConfigFieldnestedNumber"
      type="text"
      value="5"
    />
  </div>
</div>
`;

exports[`UserDefinedConfigEditComponent renders with provided values 1`] = `
<div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      StringField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldstringField"
      maxlength="255"
      name="formFieldConfigFieldstringField"
      type="text"
      value="custom"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      BooleanField
    </label>
    <div
      class="tr__form-input-checkbox-group-container"
    >
      <div
        class="tr__form-input-checkbox-group-column no-wrap"
      >
        <div
          class="tr__form-input-checkbox-container"
        >
          <div
            class="label-input-container"
          >
            <input
              class="_input-checkbox"
              id="formFieldConfigFieldbooleanField_true"
              name="formFieldConfigFieldbooleanField"
              type="checkbox"
              value="true"
            />
            <label
              for="formFieldConfigFieldbooleanField_true"
            >
              <span>
                Yes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      IntegerField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldintegerField"
      maxlength="255"
      name="formFieldConfigFieldintegerField"
      type="number"
      value="10"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      NumberField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldnumberField"
      maxlength="255"
      name="formFieldConfigFieldnumberField"
      type="text"
      value="2.71"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      PercentageField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldpercentageField"
      maxlength="255"
      name="formFieldConfigFieldpercentageField"
      type="text"
      value="75"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      SecondsField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldsecondsField"
      maxlength="255"
      name="formFieldConfigFieldsecondsField"
      type="number"
      value="60"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      MinutesField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldminutesField"
      maxlength="255"
      name="formFieldConfigFieldminutesField"
      type="number"
      value="3"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      HoursField
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldhoursField"
      maxlength="255"
      name="formFieldConfigFieldhoursField"
      type="number"
      value="1"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      SelectField
    </label>
    <select
      autocomplete="none"
      class="tr__form-input-select apptr__input _input-select"
      id="formFieldConfigFieldselectField"
      name="formFieldConfigFieldselectField"
      style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
    >
      <option
        value=""
      />
      <option
        value="a"
      >
        ChoiceA
      </option>
      <option
        value="b"
      >
        ChoiceB
      </option>
    </select>
  </div>
  <div
    class="apptr__form-input-container _small-inputs"
  >
    <label>
      MultiselectField
    </label>
    <div
      class="tr__form-input-multiselect"
    >
      <div
        class="react-select-container apptr__input _input-multiselect css-b62m3t-container"
        id="formFieldConfigFieldmultiselectField"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          class="react-select__control css-1eyznq-control"
        >
          <div
            class="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-3w2yfm-ValueContainer"
          >
            <div
              class="react-select__multi-value css-ics3nv-multiValue"
            >
              <div
                class="react-select__multi-value__label css-95e0ok-MultiValueGeneric"
              >
                ChoiceA
              </div>
              <div
                aria-label="Remove ChoiceA"
                class="react-select__multi-value__remove css-12a83d4-MultiValueRemove"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="14"
                  viewBox="0 0 20 20"
                  width="14"
                >
                  <path
                    d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="react-select__multi-value css-ics3nv-multiValue"
            >
              <div
                class="react-select__multi-value__label css-95e0ok-MultiValueGeneric"
              >
                ChoiceB
              </div>
              <div
                aria-label="Remove ChoiceB"
                class="react-select__multi-value__remove css-12a83d4-MultiValueRemove"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="14"
                  viewBox="0 0 20 20"
                  width="14"
                >
                  <path
                    d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="react-select__input-container css-1oxiwsr-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="react-select__input"
                id="react-select-3-input"
                role="combobox"
                spellcheck="false"
                style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__clear-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                />
              </svg>
            </div>
            <span
              class="react-select__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input
            name="formFieldConfigFieldmultiselectField"
            type="hidden"
            value="a"
          />
          <input
            name="formFieldConfigFieldmultiselectField"
            type="hidden"
            value="b"
          />
        </div>
      </div>
    </div>
  </div>
  <h4>
    CsvField
  </h4>
  <div
    data-testid="csv-mapping-form"
  />
  <h4>
    NestedField
  </h4>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      NestedString
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldnestedString"
      maxlength="255"
      name="formFieldConfigFieldnestedString"
      type="text"
      value="inner"
    />
  </div>
  <div
    class="apptr__form-input-container _two-columns _small-inputs"
  >
    <label>
      NestedNumber
    </label>
    <input
      autocomplete="none"
      class="apptr__form-input-string apptr__input apptr__input-string"
      id="formFieldConfigFieldnestedNumber"
      maxlength="255"
      name="formFieldConfigFieldnestedNumber"
      type="text"
      value="9"
    />
  </div>
</div>
`;
